--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/svg+xml" href="/vite.svg"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Vite + React</title>
-	<script src="https://unpkg.com/feather-icons"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 </head>
 <body>
